--- a/src/mobile/StudyBuddies/android/app/build.gradle
+++ b/src/mobile/StudyBuddies/android/app/build.gradle
@@ -140,6 +140,7 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.google.android.gms:play-services-maps:12.0.0'
 }
 
 // Run this once to be able to run the application with BUCK
