--- a/src/mobile/StudyBuddies/package.json
+++ b/src/mobile/StudyBuddies/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.3.0",
     "react-native": "0.54.4",
+    "react-native-maps": "^0.21.0",
     "react-navigation": "^1.5.11"
   },
   "devDependencies": {
