--- a/src/mobile/StudyBuddies/android/app/src/main/AndroidManifest.xml
+++ b/src/mobile/StudyBuddies/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+	android:value="AIzaSyCfB7syeclq3ld1Yoyd0OJ6m8CqEQ3H3Zk"/>
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
