--- a/src/mobile/StudyBuddies/android/app/build.gradle
+++ b/src/mobile/StudyBuddies/android/app/build.gradle
@@ -140,7 +140,7 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
-    implementation project(':react-native-maps') // Added for map usage
+    compile project(':react-native-maps') // Added for map usage
 }
 
 // Run this once to be able to run the application with BUCK
