--- a/src/mobile/StudyBuddies/package.json
+++ b/src/mobile/StudyBuddies/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "react": "16.3.0",
+    "react-icons": "^2.2.7",
     "react-native": "0.54.4",
     "react-native-maps": "^0.21.0",
     "react-native-material-bottom-navigation": "^0.9.0",
