--- a/src/iOS/StudyBuddy/Podfile
+++ b/src/iOS/StudyBuddy/Podfile
@@ -5,5 +5,6 @@ use_frameworks!
 target 'StudyBuddy' do
     pod 'Alamofire', '~> 4.7'
     pod 'GoogleMaps'
-    pod 'AFNetworking', '~> 3.0' 
+    pod 'AFNetworking', '~> 3.0'
+    pod 'MBProgressHUD', '~> 1.1.0'
 end
